[package]
name = "last-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
utmp-rs = { git = "https://github.com/MarcelRobitaille/utmp-rs" , version = " 0.1.2" }
thiserror = "1.0.24"
