[package]
name = "last-rs"
version = "0.2.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.14", features = ["formatting", "macros", "local-offset"] }
utmp-rs = "0.3.0"
thiserror = "1.0.24"
clap = "2.33.3"

# [features]
# binary-dependencies = ["clap"]

# [lib]
# name = "last_rs"

# [[bin]]
# name = "last"
# path = "src/main.rs"
# required-features = ["binary-dependencies"]
