[package]
name = "last-rs"
version = "0.2.2"
edition = "2018"
license = "MIT"
description = "A Rust reimplementation of the util-linux last command."
authors = ["Marcel Robitaille <mail@marcelrobitaille.me>"]
repository = "https://github.com/MarcelRobitaille/last-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.14", features = ["formatting", "macros", "local-offset"] }
utmp-rs = "0.4.0"
thiserror = "1.0.24"
clap = { version = "4.5.40", features = ["derive"] }

# [features]
# binary-dependencies = ["clap"]

# [lib]
# name = "last_rs"

# [[bin]]
# name = "last"
# path = "src/main.rs"
# required-features = ["binary-dependencies"]
